# src/types/tickets.types.ts
@@ -1,0 +1,3 @@
+export const TICKET_STATUS_TYPES = ['available', 'reserved', 'sold'] as const;
+
+export type TicketStatus = (typeof TICKET_STATUS_TYPES)[number];
